<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_myClubs" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_notifs"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notifs" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <!--<item-->
                <!--android:id="@+id/log_out"-->
                <!--android:icon="@drawable/ic_subdirectory_arrow_left_black_24dp"-->
                <!--android:title="@string/menu_logout"-->
                <!--android:onClick="logOut"/>-->
        </menu>
    </item>

</menu>
